@@ -1,9 +1,24 @@
 #!/bin/bash
-
 set -e
+
+config_dir="$XDG_CONFIG_HOME"
+if [ -z "$config_dir" ]; then
+  config_dir="$HOME/.config"
+fi
+
+default_ini="$config_dir/compiz-1/compizconfig/Default.ini"
+
+if [ -f "$default_ini" ]; then
+  rm "$default_ini"
+fi
+
 compiz_profile="ubuntu"
 
 if ! /usr/lib/nux/unity_support_test -p; then
+  compiz_profile="ubuntu-lowgfx"
+fi
+
+if [ "$(gsettings get com.canonical.Unity lowgfx)" == "true" ]; then
   compiz_profile="ubuntu-lowgfx"
 fi
 
